A few simple changes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ error.field.notNull=Field is required.
 
 exception.entityDoesNotExist={0} identified by {1} does not exist.
 exception.duplicateUserAccount=User account identified by {0} already exist.
+exception.userAccountNotFound=User {0} account not found.
